--- a/src/app.html
+++ b/src/app.html
@@ -10,10 +10,8 @@
 		href="%sveltekit.assets%/favicon/favicon-16x16.png"><link rel=icon type=image/ico
 		href="%sveltekit.assets%/favicon/favicon.ico">
 
-		<meta
-			name="viewport"
-			content="user-scalable=no,initial-scale=1,maximum-scale=1,minimum-scale=1,width=device-width"
-		/>
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
