🌈 style:remove fonts and add effects scroll

--- a/src/app.html
+++ b/src/app.html
@@ -2,15 +2,18 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-
-		<link rel=icon type=image/png sizes=128x128
-		href="%sveltekit.assets%/favicon/favicon-128x128.png"><link rel=icon type=image/png sizes=96x96
-		href="%sveltekit.assets%/favicon/favicon-96x96.png"><link rel=icon type=image/png sizes=32x32
-		href="%sveltekit.assets%/favicon/favicon-32x32.png"><link rel=icon type=image/png sizes=16x16
-		href="%sveltekit.assets%/favicon/favicon-16x16.png"><link rel=icon type=image/ico
-		href="%sveltekit.assets%/favicon/favicon.ico">
-
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+
+		<link rel=icon type=image/png sizes=128x128 href="%sveltekit.assets%/favicon/favicon-128x128.png">
+		<link rel=icon type=image/png sizes=96x96	href="%sveltekit.assets%/favicon/favicon-96x96.png">
+		<link rel=icon type=image/png sizes=32x32 href="%sveltekit.assets%/favicon/favicon-32x32.png">
+		<link rel=icon type=image/png sizes=16x16 href="%sveltekit.assets%/favicon/favicon-16x16.png">
+		<link rel=icon type=image/ico href="%sveltekit.assets%/favicon/favicon.ico">
+
+		<link rel="stylesheet" href="%sveltekit.assets%/styles/normalize.css">
+		<link rel="stylesheet" href="%sveltekit.assets%/fonts/font.css">
+		<link rel="stylesheet" href="%sveltekit.assets%/fonts/font-icon.css">
+		<link rel="stylesheet" href="%sveltekit.assets%/styles/animated.css">
 
 		%sveltekit.head%
 	</head>
